--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body scroll="no" style="overflow: hidden">
     <div class = "heading">
-        <h1>Welcome to Wether The Weather!</h1>
+        <h1>Welcome to Whether The Weather!</h1>
     </div>
 <div class = "card">
     <input type="text" class = "search-bar" name="" id="">
